--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
   a:hover{color:var(--b)}
 </style>
 <script src="filter.js"></script>
-<script src="index.js"></script>
+<script src="kumo.js"></script>
